# ThermalCamera

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.rst  README.rst.license  pyproject.toml  requirements.txt
LICENSES/: OFL-1.1.txt
archive/: Thermal_Cam_v56_Clue_code.py  Thermal_Cam_v56_MatrixPortal_code.py  Thermal_Cam_v56_TFT_Wing_FeatherS2_code.py  Thermal_Cam_v56_TFT_Wing_code.py  Thermal_Cam_v56_TFT_Wing_nRF52840_code.py  Thermal_Cam_v56_miniTFT_Wing_code.py  Thermal_Cam_v58_PyPortal_code.py  Thermal_Cam_v60_dazzler_Wing_code.py  Thermal_Cam_v60_miniTFT_Wing_code.py  Thermal_Cam_v70_PyGamer_code.py  Thermal_Cam_v80_PyGamer_code.py
archive/bundles/bundle_Clue/: code.py
archive/bundles/bundle_FunHouse/: code.py  thermal_cam_converters.py
archive/bundles/bundle_TFT_Wing/: code.py
archive/bundles/bundle_matrixportal/: code.py
archive/bundles/bundle_miniTFT_Wing/: code.py  thermal_cam_config.py
archive/bundles/bundle_pygamer/: boot_out.txt
archive/bundles/bundle_pyportal/: secrets.py  (+1 more)
archive/code/: Thermal_Cam_v32_PyGamer_code.py  Thermal_Cam_v40_PyGamer_code.py  Thermal_Cam_v56_TFT_Wing_nRF52840_code.py  Thermal_Cam_v56_miniTFT_Wing_code.py  Thermal_Cam_v60_PyGamer_code.py  Thermal_Cam_v60_dazzler_Wing_code.py  Thermal_Cam_v60_miniTFT_Wing_code.py  Thermal_Cam_v61_PyGamer_code.py
bundles/bundle_pygamer/: boot_out.txt  code.py
thermalcamera/: Thermal_Cam_v80_PyGamer_code.py  code.py  thermalcamera.py  thermalcamera_code.py  thermalcamera_config.py  thermalcamera_converters.py
thermalcamera/fonts/: OpenSans-9.bdf  OpenSans-9.bdf.license
(+3 files in other folders)
